[shared EditableText] Prevent all EditableText input contents jumping down 1px when entering edit mode.

--- a/app/src/editor/canvas/components/Ports/Value/Text/text.pcss
+++ b/app/src/editor/canvas/components/Ports/Value/Text/text.pcss
@@ -23,11 +23,6 @@
   color: #323232;
 }
 
-.root input {
-  /* prevent input content jumping down 1px when entering edit mode */
-  margin-top: -1px;
-}
-
 .root.blank,
 .root input::placeholder {
   font-style: normal;
